Fixing bug 39289. Fixing a crasher at shutdown time when createprofile option is used. r=dougt